<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Internet Status Monitor PRO</string>
    <string name="url_label">Query URL</string>
    <string name="interval_label">Check frquency</string>
    <string name="interval_0_label">Low</string>
    <string name="interval_1_label">Medium</string>
    <string name="interval_2_label">High</string>
    <string name="interval_validation_error">The interval must be in the range 2 to 65535.</string>
    <string name="url_validation_error">Invalid URL.</string>
    <string name="status_title_label">Internet status</string>
    <string name="status_online_label">Online</string>
    <string name="status_offline_label">Offline</string>
    <string name="status_bad_label">Bad</string>

    <!-- stat -->
    <string name="stat_tx_label">TX bytes/sec:</string>
    <string name="stat_rx_label">RX bytes/sec:</string>
    <string name="stat_unsupport">Device unsupported</string>
    <string name="stat_tx_total_label">TX total(MB):</string>
    <string name="stat_rx_total_label">RX total(MB):</string>
    <string name="stat_reset_label">Reset</string>
    <string name="stat_setup_label">Setup</string>
    <string name="stat_limit_alert">Limitation alert</string>
    <string name="stat_setup_title_label">Set limitation alert(MB):</string>
    <string name="stat_limit_label">Limitation alert(MB):</string>
    <string name="stat_limit_up_exceed_label">Mobile upload limitation %1$s MB exceeded</string>
    <string name="stat_limit_down_exceed_label">Mobile download limitation %1$s MB exceeded</string>
    <string name="stat_wf_limit_up_exceed_label">Wi-Fi upload limitation %1$s MB exceeded</string>
    <string name="stat_wf_limit_down_exceed_label">Wi-Fi download limitation %1$s MB exceeded</string>
    <string name="stat_ok_label">OK</string>
    <string name="stat_cancel_label">Cancel</string>

    <string name="ntw_type_label">Network Type:</string>
    <string name="ntw_state_label">Network State:</string>
    <string name="ntw_roam_label">Roaming:</string>
    <string name="ntw_none_label">None</string>
    <string name="wifi_label">Wi-Fi</string>
    <string name="mobile_label">Mobile network</string>
    <string name="true_label">Yes</string>
    <string name="false_label">No</string>
    <string name="type_0_label">Connecting</string>
    <string name="type_1_label">Connected</string>
    <string name="type_2_label">Suspended</string>
    <string name="type_3_label">Disconnecting</string>
    <string name="type_4_label">Disconnected</string>
    <string name="type_5_label">Unknown</string>
    
    <string name="action_settings">Settings</string>
    <string name="settings_alert">Alert Settings</string>
    <string name="settings_vibrator">Vibrator</string>
    <string name="settings_off">Off</string>
    <string name="settings_long">Long</string>
    <string name="settings_light">Light</string>
    <string name="settings_fast">Fast</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_on">On</string>
    
    <!-- pro -->
    <string name="settings_network">Network Settings</string>
    <string name="settings_thre_latency">Latency Threshold:</string>
    <string name="settings_thre_latency_desc">Parameter to determine bad latency (The lower easier to show bad latency):</string>
    <string name="settings_thre_high">High Traffic Threshold:</string>
    <string name="settings_thre_high_desc">Parameter to determine high data traffic:</string>
    <string name="settings_low">Low</string>
    <string name="settings_high">High</string>

    <!-- Configuration values, do not translate -->
    <string name="onoff_default">off</string>
    <string name="url_default">www.google.com</string>
    <string name="interval_0_default">10</string>
    <string name="interval_1_default">6</string>
    <string name="interval_2_default">4</string>
    <string name="interval_3_default">3</string>
    <string name="interval_4_default">2</string>
    <string name="bad_interval_default">600</string>
    <string name="vibration_0_default">0</string>
    <string name="vibration_1_default">200</string>
    <string name="vibration_2_default">500</string>
    <string name="vibration_3_default">1500</string>
    <string name="vibration_4_default">3000</string>
    <string name="light_0_default">0</string>
    <string name="light_1_default">3000</string>
    <string name="light_2_default">1500</string>
    <string name="light_3_default">500</string>
    <string name="light_4_default">200</string>
    
    <!-- pro -->
    <string name="bad_interval_default_0">150</string>
    <string name="bad_interval_default_1">200</string>
    <string name="bad_interval_default_2">600</string>
    <string name="bad_interval_default_3">1000</string>
    <string name="bad_interval_default_4">1500</string>
    <string name="high_traffic_default_0">100</string>
    <string name="high_traffic_default_1">256</string>
    <string name="high_traffic_default_2">512</string>
    <string name="high_traffic_default_3">1024</string>
    <string name="high_traffic_default_4">2048</string>
    <string name="high_traffic_desc_0">100KB</string>
    <string name="high_traffic_desc_1">256KB</string>
    <string name="high_traffic_desc_2">512KB</string>
    <string name="high_traffic_desc_3">1MB</string>
    <string name="high_traffic_desc_4">2MB</string>

</resources>